[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.build-utils</groupId>
     <artifactId>cxf-build-utils</artifactId>
-    <version>3.4.4-jbossorg-1</version>
+    <version>3.4.4-jbossorg-2-SNAPSHOT</version>
     <name>Apache CXF Build Utilities</name>
     <url>https://cxf.apache.org</url>
     <packaging>pom</packaging>
@@ -57,7 +57,7 @@
     <scm>
         <connection>scm:git:https://github.com/jboss/cxf-build-utils.git</connection>
         <developerConnection>scm:git:https://github.com/jboss/cxf-build-utils.git</developerConnection>
-        <tag>cxf-build-utils-3.4.4-jbossorg-1</tag>
+        <tag>cxf-build-utils-3.4.4-jbossorg</tag>
     </scm>
     <mailingLists>
         <mailingList>
