--- a/xml2fastinfoset-plugin/pom.xml
+++ b/xml2fastinfoset-plugin/pom.xml
@@ -21,7 +21,7 @@
     <parent>
          <groupId>org.apache.cxf.build-utils</groupId>
          <artifactId>cxf-build-utils</artifactId>
-         <version>3.4.4-jbossorg-1</version>
+         <version>3.4.4-jbossorg-2-SNAPSHOT</version>
     </parent>
 
 
